<resources>
    <string name="app_name">Splits</string>
    <string name="splash_screen_description">Splash Screen</string>
    <string name="app_title">Splits</string>
    <string name="username_or_email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_button">LOGIN</string>
    <string name="back_to_home">Back To Home</string>
    <string name="login_text">LOGIN</string>
    <string name="navDrawerTextOpen">Open</string>
    <string name="navDrawerTextClose">Close</string>
    <string name="register_user_title">REGISTER USER</string>
    <string name="name_hint">name</string>
    <string name="register_button">REGISTER</string>
    <string name="back_to_home_text">Back To Home</string>
    <string name="password_text_hint">password</string>
    <string name="confirm_password_text_hint">confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_nav_profile">Profile</string>
    <string name="drawer_nav_groups">Groups</string>
    <string name="drawer_nav_logout">Logout</string>
    <string name="description_hint">description</string>
    <string name="select_users">Select Users</string>
</resources>